gen/Grammar/HTML/HtmlJinjaParser.java
// Generated from src/Grammar/HTML/HtmlJinjaParser.g4 by ANTLR 4.13.2
package Grammar.HTML;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HtmlJinjaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, PI_START=2, CDATA_START=3, HTML_COMMENT=4, CONDITIONAL_COMMENT=5, 
		OPEN_EXPR=6, OPEN_STMT=7, OPEN_COMMENT=8, SCRIPT_OPEN=9, STYLE_OPEN=10, 
		LINK_OPEN=11, TAG_CLOSE_OPEN=12, TAG_OPEN=13, HTML_TEXT=14, TAG_OPEN_EXPR=15, 
		TAG_OPEN_STMT=16, TAG_NAME=17, ATTR_NAME=18, ATTR_EQ=19, ATTR_VALUE=20, 
		TAG_WS=21, TAG_SLASH=22, TAG_CLOSE=23, TAG_SLASH_CLOSE=24, SCRIPT_OPEN_EXPR=25, 
		SCRIPT_OPEN_STMT=26, SCRIPT_ATTR_NAME=27, SCRIPT_TAG_NAME=28, SCRIPT_ATTR_EQ=29, 
		SCRIPT_ATTR_VALUE_START=30, SCRIPT_ATTR_VALUE_START_SINGLE=31, SCRIPT_ATTR_VALUE_UNQUOTED=32, 
		SCRIPT_TAG_WS=33, SCRIPT_TAG_CLOSE=34, SCRIPT_TAG_SLASH_CLOSE=35, SCRIPT_ATTR_VALUE_END=36, 
		SCRIPT_ATTR_VALUE_OPEN_EXPR=37, SCRIPT_ATTR_VALUE_OPEN_STMT=38, SCRIPT_ATTR_VALUE_TEXT=39, 
		SCRIPT_ATTR_VALUE_END_SINGLE=40, SCRIPT_ATTR_VALUE_OPEN_EXPR_SINGLE=41, 
		SCRIPT_ATTR_VALUE_OPEN_STMT_SINGLE=42, SCRIPT_ATTR_VALUE_TEXT_SINGLE=43, 
		SCRIPT_JINJA_EXPR=44, SCRIPT_JINJA_STMT=45, CDATA_START_IN_SCRIPT=46, 
		SCRIPT_CLOSE=47, SCRIPT_CONTENT_TEXT=48, STYLE_OPEN_EXPR=49, STYLE_OPEN_STMT=50, 
		STYLE_ATTR_NAME=51, STYLE_TAG_NAME=52, STYLE_ATTR_EQ=53, STYLE_ATTR_VALUE_START=54, 
		STYLE_ATTR_VALUE_START_SINGLE=55, STYLE_ATTR_VALUE_UNQUOTED=56, STYLE_TAG_WS=57, 
		STYLE_TAG_CLOSE=58, STYLE_TAG_SLASH_CLOSE=59, STYLE_ATTR_VALUE_END=60, 
		STYLE_ATTR_VALUE_OPEN_EXPR=61, STYLE_ATTR_VALUE_OPEN_STMT=62, STYLE_ATTR_VALUE_TEXT=63, 
		STYLE_ATTR_VALUE_END_SINGLE=64, STYLE_ATTR_VALUE_OPEN_EXPR_SINGLE=65, 
		STYLE_ATTR_VALUE_OPEN_STMT_SINGLE=66, STYLE_ATTR_VALUE_TEXT_SINGLE=67, 
		STYLE_JINJA_EXPR=68, STYLE_JINJA_STMT=69, CDATA_START_IN_STYLE=70, STYLE_CLOSE=71, 
		STYLE_CONTENT_TEXT=72, EXPR_WS=73, EXPR_CONTENT=74, CLOSE_EXPR=75, STMT_WS=76, 
		CLOSE_STMT=77, STMT_CONTENT=78, COMMENT_WS=79, COMMENT_CONTENT=80, CLOSE_COMMENT=81, 
		CDATA_CONTENT=82, PI_CONTENT=83;
	public static final int
		RULE_html = 0, RULE_htmlContent = 1, RULE_element = 2, RULE_tagOpen = 3, 
		RULE_tagClose = 4, RULE_selfClosingTag = 5, RULE_voidTag = 6, RULE_scriptTag = 7, 
		RULE_scriptContent = 8, RULE_scriptContentText = 9, RULE_styleTag = 10, 
		RULE_styleContent = 11, RULE_styleContentText = 12, RULE_tagContent = 13, 
		RULE_attribute = 14, RULE_scriptAttribute = 15, RULE_scriptAttrValue = 16, 
		RULE_scriptAttrValueContent = 17, RULE_scriptAttrValueContentSingle = 18, 
		RULE_styleAttribute = 19, RULE_styleAttrValue = 20, RULE_styleAttrValueContent = 21, 
		RULE_styleAttrValueContentSingle = 22, RULE_htmlText = 23, RULE_jinjaExpr = 24, 
		RULE_jinjaStmt = 25, RULE_jinjaComment = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"html", "htmlContent", "element", "tagOpen", "tagClose", "selfClosingTag", 
			"voidTag", "scriptTag", "scriptContent", "scriptContentText", "styleTag", 
			"styleContent", "styleContentText", "tagContent", "attribute", "scriptAttribute", 
			"scriptAttrValue", "scriptAttrValueContent", "scriptAttrValueContentSingle", 
			"styleAttribute", "styleAttrValue", "styleAttrValueContent", "styleAttrValueContentSingle", 
			"htmlText", "jinjaExpr", "jinjaStmt", "jinjaComment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'<?'", null, null, null, null, null, "'{#'", "'<script'", 
			"'<style'", "'<link'", "'</'", "'<'", null, null, null, null, null, null, 
			null, null, "'/'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'</script>'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'</style>'", null, null, null, "'}}'", 
			null, "'%}'", null, null, null, "'#}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "PI_START", "CDATA_START", "HTML_COMMENT", "CONDITIONAL_COMMENT", 
			"OPEN_EXPR", "OPEN_STMT", "OPEN_COMMENT", "SCRIPT_OPEN", "STYLE_OPEN", 
			"LINK_OPEN", "TAG_CLOSE_OPEN", "TAG_OPEN", "HTML_TEXT", "TAG_OPEN_EXPR", 
			"TAG_OPEN_STMT", "TAG_NAME", "ATTR_NAME", "ATTR_EQ", "ATTR_VALUE", "TAG_WS", 
			"TAG_SLASH", "TAG_CLOSE", "TAG_SLASH_CLOSE", "SCRIPT_OPEN_EXPR", "SCRIPT_OPEN_STMT", 
			"SCRIPT_ATTR_NAME", "SCRIPT_TAG_NAME", "SCRIPT_ATTR_EQ", "SCRIPT_ATTR_VALUE_START", 
			"SCRIPT_ATTR_VALUE_START_SINGLE", "SCRIPT_ATTR_VALUE_UNQUOTED", "SCRIPT_TAG_WS", 
			"SCRIPT_TAG_CLOSE", "SCRIPT_TAG_SLASH_CLOSE", "SCRIPT_ATTR_VALUE_END", 
			"SCRIPT_ATTR_VALUE_OPEN_EXPR", "SCRIPT_ATTR_VALUE_OPEN_STMT", "SCRIPT_ATTR_VALUE_TEXT", 
			"SCRIPT_ATTR_VALUE_END_SINGLE", "SCRIPT_ATTR_VALUE_OPEN_EXPR_SINGLE", 
			"SCRIPT_ATTR_VALUE_OPEN_STMT_SINGLE", "SCRIPT_ATTR_VALUE_TEXT_SINGLE", 
			"SCRIPT_JINJA_EXPR", "SCRIPT_JINJA_STMT", "CDATA_START_IN_SCRIPT", "SCRIPT_CLOSE", 
			"SCRIPT_CONTENT_TEXT", "STYLE_OPEN_EXPR", "STYLE_OPEN_STMT", "STYLE_ATTR_NAME", 
			"STYLE_TAG_NAME", "STYLE_ATTR_EQ", "STYLE_ATTR_VALUE_START", "STYLE_ATTR_VALUE_START_SINGLE", 
			"STYLE_ATTR_VALUE_UNQUOTED", "STYLE_TAG_WS", "STYLE_TAG_CLOSE", "STYLE_TAG_SLASH_CLOSE", 
			"STYLE_ATTR_VALUE_END", "STYLE_ATTR_VALUE_OPEN_EXPR", "STYLE_ATTR_VALUE_OPEN_STMT", 
			"STYLE_ATTR_VALUE_TEXT", "STYLE_ATTR_VALUE_END_SINGLE", "STYLE_ATTR_VALUE_OPEN_EXPR_SINGLE", 
			"STYLE_ATTR_VALUE_OPEN_STMT_SINGLE", "STYLE_ATTR_VALUE_TEXT_SINGLE", 
			"STYLE_JINJA_EXPR", "STYLE_JINJA_STMT", "CDATA_START_IN_STYLE", "STYLE_CLOSE", 
			"STYLE_CONTENT_TEXT", "EXPR_WS", "EXPR_CONTENT", "CLOSE_EXPR", "STMT_WS", 
			"CLOSE_STMT", "STMT_CONTENT", "COMMENT_WS", "COMMENT_CONTENT", "CLOSE_COMMENT", 
			"CDATA_CONTENT", "PI_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HtmlJinjaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HtmlJinjaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HtmlJinjaParser.EOF, 0); }
		public List<HtmlContentContext> htmlContent() {
			return getRuleContexts(HtmlContentContext.class);
		}
		public HtmlContentContext htmlContent(int i) {
			return getRuleContext(HtmlContentContext.class,i);
		}
		public HtmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterHtml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitHtml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitHtml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlContext html() throws RecognitionException {
		HtmlContext _localctx = new HtmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_html);
		int _la;
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & -4611658805513025601L) != 0)) {
					{
					{
					setState(54);
					htmlContent();
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(60);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends ParserRuleContext {
		public JinjaExprContext jinjaExpr() {
			return getRuleContext(JinjaExprContext.class,0);
		}
		public JinjaStmtContext jinjaStmt() {
			return getRuleContext(JinjaStmtContext.class,0);
		}
		public JinjaCommentContext jinjaComment() {
			return getRuleContext(JinjaCommentContext.class,0);
		}
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public HtmlTextContext htmlText() {
			return getRuleContext(HtmlTextContext.class,0);
		}
		public HtmlContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterHtmlContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitHtmlContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitHtmlContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlContentContext htmlContent() throws RecognitionException {
		HtmlContentContext _localctx = new HtmlContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlContent);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_EXPR:
			case TAG_OPEN_EXPR:
			case SCRIPT_OPEN_EXPR:
			case SCRIPT_JINJA_EXPR:
			case STYLE_OPEN_EXPR:
			case STYLE_JINJA_EXPR:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				jinjaExpr();
				}
				break;
			case OPEN_STMT:
			case TAG_OPEN_STMT:
			case SCRIPT_OPEN_STMT:
			case SCRIPT_JINJA_STMT:
			case STYLE_OPEN_STMT:
			case STYLE_JINJA_STMT:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				jinjaStmt();
				}
				break;
			case OPEN_COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				jinjaComment();
				}
				break;
			case SCRIPT_OPEN:
			case STYLE_OPEN:
			case LINK_OPEN:
			case TAG_OPEN:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				element();
				}
				break;
			case HTML_TEXT:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				htmlText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TagElementWithContentContext extends ElementContext {
		public TagOpenContext tagOpen() {
			return getRuleContext(TagOpenContext.class,0);
		}
		public TagContentContext tagContent() {
			return getRuleContext(TagContentContext.class,0);
		}
		public TagCloseContext tagClose() {
			return getRuleContext(TagCloseContext.class,0);
		}
		public TagElementWithContentContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterTagElementWithContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitTagElementWithContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitTagElementWithContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TagElementEmptyContext extends ElementContext {
		public TagOpenContext tagOpen() {
			return getRuleContext(TagOpenContext.class,0);
		}
		public TagCloseContext tagClose() {
			return getRuleContext(TagCloseContext.class,0);
		}
		public TagElementEmptyContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterTagElementEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitTagElementEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitTagElementEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingElementContext extends ElementContext {
		public SelfClosingTagContext selfClosingTag() {
			return getRuleContext(SelfClosingTagContext.class,0);
		}
		public SelfClosingElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterSelfClosingElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitSelfClosingElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitSelfClosingElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ScriptElementContext extends ElementContext {
		public ScriptTagContext scriptTag() {
			return getRuleContext(ScriptTagContext.class,0);
		}
		public ScriptElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitScriptElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementContext extends ElementContext {
		public VoidTagContext voidTag() {
			return getRuleContext(VoidTagContext.class,0);
		}
		public VoidElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterVoidElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitVoidElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitVoidElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleElementContext extends ElementContext {
		public StyleTagContext styleTag() {
			return getRuleContext(StyleTagContext.class,0);
		}
		public StyleElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_element);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new VoidElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				voidTag();
				}
				break;
			case 2:
				_localctx = new TagElementWithContentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				tagOpen();
				setState(73);
				tagContent();
				setState(74);
				tagClose();
				}
				break;
			case 3:
				_localctx = new TagElementEmptyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				tagOpen();
				setState(77);
				tagClose();
				}
				break;
			case 4:
				_localctx = new SelfClosingElementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				selfClosingTag();
				}
				break;
			case 5:
				_localctx = new ScriptElementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				scriptTag();
				}
				break;
			case 6:
				_localctx = new StyleElementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				styleTag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
